# ML_EtZ

./: .gitignore  LICENSE  README.md  structure.excalidraw
.github/workflows/: unittests.yml
Data Gathering/: pyproject.toml
Test_system/doc/: init.md
Test_system/src/auth/: Dockerfile  Makefile  requirements.txt  sample_data.py  server.py  setup.sh
Test_system/src/auth/manifests/: auth_deployment.yml  secret.yml
Test_system/src/gateway/: server.py
Test_system/src/gateway/auth/: validate.py
Test_system/src/gateway/auth_svc/: access.py
Test_system/src/gateway/manifests/: deployment_gateway.yml  ingress.yml
Zendra/DwrG/: pyproject.toml  readme.md  setup.drawio
Zendra/DwrG/K8s/: note.md
Zendra/DwrG/K8s/volumns/: hp_clm.yaml  vlm.yaml
exp-student-performance/: setup.py  structure.excalidraw
exp-student-performance/src/: exception.py
exp-student-performance/src/notebook/: eda.ipynb
exp-student-performance/tests/: test_logger.py
ml-house-price-prediction/: .$flow.drawio.bkp  flow.drawio  readme.md
ml-house-price-prediction/EDA/: configs.json  test_dp.py
ml-house-price-prediction/src/App/Backend/: app.py  mongo_connect.py  pyproject.toml
ml-house-price-prediction/src/App/Backend/config/: api_conf.yaml
ml-house-price-prediction/src/App/Backend/test/: app_test.py
ml-house-price-prediction/src/App/Backend/utils/: logger.py  test_data.json
ml-house-price-prediction/src/FE-pipeline/: code_test.py  main.py  runner.py
ml-house-price-prediction/src/utils/: data_loader.py
src/: exception.py  logger.py
(+1 files in other folders)
