[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Akhil Vinayak P <nirvanaosborn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
motor = "^3.4.0"
hydra-core = "^1.3.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
